--- a/Personal Projects/Web Development/ServerSideJavascriptWeather/package.json
+++ b/Personal Projects/Web Development/ServerSideJavascriptWeather/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {},
   "scripts": {
