--- a/Personal Projects/Web Development/ServerSideJavascriptWeather/package.json
+++ b/Personal Projects/Web Development/ServerSideJavascriptWeather/package.json
@@ -4,6 +4,7 @@
   "description": "determines weather and location when user presses a button",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "nedb": "^1.8.0",
