Fixed makerfile, and added all remaining code to the append function. Started skeleton code of the removeByValfunction

--- a/Class Work/CS 2308/prog 4/makefile
+++ b/Class Work/CS 2308/prog 4/makefile
@@ -4,6 +4,6 @@ a.out: test.o IntList.o
 main.o: test.o IntList.h
 	g++ -c test.cpp
 
-IntList.o: IntList.cpp InstList.h
+IntList.o: IntList.cpp IntList.h
 	g++ -c IntList.cpp
 
