Added some code to removeValue, it has not been tested. Also fixed issues with the make file not able to compile programs

--- a/Class Work/CS 2308/prog 3/makefile
+++ b/Class Work/CS 2308/prog 3/makefile
@@ -1,5 +1,5 @@
 a.out: ItemListTests.o ItemListMethods.o
-	g++ test.o IntList.o	
+	g++ ItemListTests.o ItemListMethods.o	
 
 main.o: ItemListTests.o IntList.h
 	g++ -c ItemListTests.o
