Removed Dynstack.cpp and put in the header file. After this made the neccisary changes to the make file. Tested with test.cpp, and it worked correctly. Also made comment additions.

--- a/Class Work/CS 2308/prog 5/makefile
+++ b/Class Work/CS 2308/prog 5/makefile
@@ -1,9 +1,3 @@
-a.out: test.o DynStack.o
-	g++ test.o DynStack.o
-
-main.o: test.o DynStack.h
+a.out: test.o DynStack.h
 	g++ -c test.cpp
-
-DynStack.o: DynStack.cpp DynStack.h
-	g++ -c DynStack.cpp
 
