made changes to test file and que file, as weell as make file. Currently the dequeue is not working, but cannot be tested as something is not being compileed correctly

--- a/Class Work/CS 2308/prog 5/makefile
+++ b/Class Work/CS 2308/prog 5/makefile
@@ -1,3 +1,13 @@
-a.out: test.o DynStack.h
-	g++ -c test.cpp
+$CC = g++
+DEPS = DynStack.h DynQue.h
+
+.phony: all clean
+
+all: test.out
+
+test.out: main.o
+	$(CXX) -o $@ $+
+
+main.o: test.cpp 
+	$(CXX) -c -o $@ $<
 
