Fixed removed by value function. Implemented the test function for remove by value. Changed read file function to use char arrays. Also implemented test function for read file. Added code for selection sort, but it has not been tested. Also added all new functions to the UML diagram. Seletion sort code has not been tested, nor a test function implemented

--- a/Class Work/CS 2308/prog 3/makefile
+++ b/Class Work/CS 2308/prog 3/makefile
@@ -1,8 +1,8 @@
-a.out: ItemListTests.o ItemListMethods.o
-	g++ ItemListTests.o ItemListMethods.o	
+a.out: ItemListMethods.o ItemListTests.o 
+	g++ ItemListMethods.o ItemListTests.o
 
-main.o: ItemListTests.o IntList.h
-	g++ -c ItemListTests.o
-
-ItemListMethdos.o: ItemListMethods.cpp ItemListTest.h
+main.o: ItemListMethods.cpp ItemListClass.h
 	g++ -c ItemListMethods.cpp
+
+ItemListTests.o: ItemListTests.cpp ItemListTests.h
+	g++ -c ItemListTests.cpp ItemListTests.h
