--- a/Personal Projects/Web Development/SP500 Website/package.json
+++ b/Personal Projects/Web Development/SP500 Website/package.json
@@ -15,8 +15,10 @@
   "author": "Noah del Angel",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4"
   }
 }
