--- a/Personal Projects/Web Development/SP500 Website/package.json
+++ b/Personal Projects/Web Development/SP500 Website/package.json
@@ -15,6 +15,7 @@
   "author": "Noah del Angel",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
