--- a/Personal Projects/Terminal Engine/.vscode/settings.json
+++ b/Personal Projects/Terminal Engine/.vscode/settings.json
@@ -5,6 +5,10 @@
         "string": "cpp",
         "string_view": "cpp",
         "bitset": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "ios": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "streambuf": "cpp"
     }
 }
