Added more overloaded operators to matrix headers to make arthimatic easier

--- a/Personal Projects/Terminal Engine/.vscode/settings.json
+++ b/Personal Projects/Terminal Engine/.vscode/settings.json
@@ -9,6 +9,11 @@
         "ios": "cpp",
         "istream": "cpp",
         "ostream": "cpp",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "__bit_reference": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "complex": "cpp",
+        "iterator": "cpp"
     }
 }
