Added double buffering to engine. This resulted in adding new private variables to rasterizer.h. These new cars were renderCallback, pFrame, rFrame, frameBuffers[], and currentBuffer. Also added 2 new function to the Rasterizer class, swapBuffers() and setRenderCB(). Made present frame no longer a inline function. Made new changes to present frame to make double buffering faster. This resulted in the inclusion of the threading library in the makefile and in Rasterizer.cpp. Also added a new function to main.cpp, renderCB(). This function is able to render with the new double buffering stuff. Also made angle and rasterizer global variables. The var rasterizer in main.cpp has also been changed to a pointer.

--- a/Personal Projects/Terminal Engine/makefile
+++ b/Personal Projects/Terminal Engine/makefile
@@ -5,7 +5,7 @@ CFLAGS=-I$(IDIR)
 ODIR=obj
 LDIR =../lib
 
-LIBS=-lm -lncurses
+LIBS=-lm -lncurses -lpthread
 
 _DEPS=defs.h Vector2.h Vector3.h Vector4.h Matrix22.h Matrix33.h Matrix44.h Quaternion.h GenMath.h Rasterizer.h Framebuffer.h
 DEPS=$(patsubst %,$(IDIR)/%,$(_DEPS))
