Corrected small formatting issue with sra, and tested code zues. All that is left is to clean up code

--- a/Class Work/.vscode/settings.json
+++ b/Class Work/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "ostream": "cpp",
+        "ios": "cpp"
     },
     "code-runner.customCommand": "echo Hello"
 }
